# tonbitcoin_front_3d

./: .env  .npmrc  .prettierrc.json  .stylelintrc  .vercelignore  DEPLOY.md  LOTTERY_API.md  README.md  admin.py  axios.config.js  index.html  localhost-key.pem  localhost.pem  lottery_backend_example.py  models.py  package-lock.json  package.json  serializers.py  server.js  server_local.js  vercel.json  views.py  vite.config.js
bot/: main.py  (+2 more)
edit/: 2_migrate_refs.py  aaaa.py  boosters.py  burn_t.py  charts.py  checker.py  comp.py  deploy_collection.py  docker-compose.yml  generation.py  imp_kw.py  import_users.py  manage.py  mining.py  mint_nft.py  nully.py  old_db.py  pyproject.toml  requirements.txt  scr.py  sender.py  shared.py  staking.py  t copy.py  t.py  t.py.backup_20251224_120915  t2.py  trans.py  ttt.py  ttt2.py
edit/core/: admin.py  apps.py  models.py  models.py.before_fix  serializers.py  tasks.py  thro.py  urls.py  utils.py  views.py
edit/core/migrations/: 0001_initial.py  0002_userprofile.py  0003_powerstation_powerstationconfig_and_more.py  0004_remove_powerstation_engineers_and_more.py  0005_withdrawalrequest_delete_powerstation_and_more.py  0006_userprofile_battery_balance_userprofile_farm_runtime_and_more.py  0007_userprofile_ton_wallet.py  0008_engineerconfig_genpowerstationconfig_and_more.py  0009_repairpowerstationconfig.py  0010_userprofile_ton_wallet.py  0011_buffertransaction.py  0012_userprofile_kw_address_userprofile_tbtc_address.py  0013_userprofile_nft_string.py  0014_userprofile_started_mining_at.py  0015_asicscoefs.py  0016_alter_userprofile_storage.py  0017_userprofile_mining_period.py  0018_buffertransaction_success.py  0019_userprofile_last_tbtc_added.py  0020_alter_userprofile_generation_rate_and_more.py  0021_alter_userprofile_ton_wallet.py  0022_userprofile_username.py  0023_withdrawalrequest_energy_and_more.py  0024_userprofile_true_started_mining_at.py  0025_roadmapitem_item_date.py  0026_userprofile_register_date.py  0027_withdrawalrequest_storage_level.py  0028_userprofile_tbtc_claimed_period_and_more.py  0029_userprofile_bring_bonus_kw_level_1_and_more.py  0030_userprofile_tap_count.py  0031_overheatconfig_userprofile_overheated_until.py  (+97 more)
edit/docs/: QUICK_FIX_GUIDE.md  STATION_ROLLBACK_FIX_FINAL.md  STATION_ROLLBACK_ISSUE.md
edit/tasks/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
edit/tgbot/: apps.py  urls.py  views.py
edit/tonbtc/: asgi.py  celery.py  settings.py.backup_20251017_084808  settings.py.backup_20251021_055004  settings.py.backup_250_20251017_084929  urls.py  wsgi.py
(+242 files in other folders)
